# taskmanager

./: .env  Cargo.toml  README.md
src/: main.rs
src/migrations/: 0001_tasks_table.sql  0002_users_table.sql
src/models/: mod.rs
src/routes/: auth.rs  mod.rs  tasks.rs
src/services/: auth.rs  constants.rs  mod.rs  pool.rs  task.rs
